--- a/index.html
+++ b/index.html
@@ -1,54 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rings</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script defer src="index.js" type='module'></script>
-  <link rel="stylesheet" href="./styles.css">
-
-</head>
-<body>
-  <div class='flex w-screen h-screen bg-neutral-50'>
-    <div class='w-1/4 border border-green-500 h-full flex flex-col justify-start bg-white'>
-      <div><h2 class='text-center m-6 text-3xl'>My Rings</h2></div>
-      <hr>
-      <div>
-
-      </div>
-      <button id='newRingButton' class='m-6 border border-green-500 p-2 justify-self-end'><span class='text-green-500'>+</span> New Ring</button>
-
-
-
-    </div>
-    <div class='w-screen flex flex-col justify-between items-between'>
-      <div class='w-full h-full flex justify-center items-center gap-8'>
-
-        <div id='oring' class='oring min-w-96 rounded-full dragzone  border border-green-500 flex justify-center items-center'>
-          <div draggable='true'  id='iring' class='iring z-50 w-8 h-8 rounded-full bg-white border border-green-500 text-green-500 flex text-center items-center justify-center'><span id='center'>+</span></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rings</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="index.js" type="module"></script>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <div class="flex w-screen h-screen bg-neutral-50">
+      <div
+        class="w-1/4 border border-lime-700 h-full flex flex-col justify-start bg-white"
+      >
+        <div>
+          <div class="text-center m-12 text-4xl text-lime-500">My Rings</div>
         </div>
-        <div class='self-start p-6 justify-self-end'>
-          <div class='flex flex-col justify-start align-start text-2xl text-green-600'>
-            <div class='text-2xl'>Ring Title</div>
-
+        <hr />
+        <div>
+          <button
+            class="ringlistbutton m-6 border border-lime-700 text-lime-500 w-4/5 flex justify-between text-center items-center justify-center"
+          >
+            <div id="ringlisttitle" class="p-3 text-center w-4/5">
+              Ring Title
+            </div>
+            <div id="ringlistdelete" class="w-1/5 h-full p-3 bg-lime-500">
+              <span class="text-white">x</span>
+            </div>
+          </button>
+        </div>
+        <button
+          id="newRingButton"
+          class="newring m-6 border border-lime-700 p-3 text-lime-500 w-4/5"
+        >
+          <span class="text-lime-700">+</span> New Ring
+        </button>
+      </div>
+      <div class="w-screen flex flex-col justify-between items-between">
+        <div class="w-full h-full flex justify-center items-center gap-8">
+          <div
+            id="oring"
+            class="oring min-w-96 rounded-full dragzone border border-lime-700 flex justify-center items-center"
+          >
+            <div
+              draggable="true"
+              id="iring"
+              class="iring z-50 w-9 h-9 rounded-full bg-white border border-lime-700 text-lime-500 flex text-center items-center justify-center"
+            >
+              <span id="center">+</span>
+            </div>
+          </div>
+          <div class="self-start p-6 justify-self-end">
+            <div
+              class="flex flex-col justify-start align-start text-2xl text-lime-500"
+            >
+              <div class="text-2xl">Ring Title</div>
+            </div>
           </div>
         </div>
 
-
-
+        <div id="control" class="w-full h-12 greenbar"></div>
       </div>
-
-      <div id='control' class='w-full h-12 bg-emerald-200 '></div>
-
     </div>
-
-
-
-
-
-  </div>
-  
-</body>
+  </body>
 </html>
