added circle radius dragging formula

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <div
               draggable="true"
               id="iring"
-              class="iring z-50 w-9 h-9 rounded-full bg-white border border-lime-700 text-lime-500 flex text-center items-center justify-center"
+              class="iring z-50 w-9 h-9 rounded-full bg-white border border-lime-700 text-lime-500 flex text-center items-center justify-center cursor-grab"
             >
-              <span id="center">+</span>
+              +
             </div>
           </div>
           <div class="self-start p-6 justify-self-end">
