ring drag adjusted

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="flex w-screen h-screen bg-neutral-50">
+    <div class="flex w-screen h-screen bg-zinc-50">
       <div
         class="w-1/4 border border-lime-700 h-full flex flex-col justify-start bg-white"
       >
@@ -46,7 +46,7 @@
             <div
               draggable="true"
               id="iring"
-              class="iring z-50 w-9 h-9 rounded-full bg-white border border-lime-700 text-lime-500 flex text-center items-center justify-center cursor-grab"
+              class="iring z-50 w-9 h-9 rounded-full border border-lime-700 text-lime-500 flex text-center items-center justify-center cursor-grab"
             >
               +
             </div>
