updated local storage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="text-center m-12 text-4xl text-lime-500">My Rings</div>
         </div>
         <hr />
-        <div>
+        <div id='newRingGroup'>
           <button
             id="ringid_1"
             class="ringlistbutton m-6 border border-lime-700 text-lime-500 w-4/5 flex justify-between text-center items-center justify-center"
