--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rings</title>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css'></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="./dist/index.js" type="module"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel='stylesheet' src='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css'></link>
     <link rel="stylesheet" href="./dist/styles.css" />
   </head>
   <body>
