--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel='stylesheet' src='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css'></link>
     <link rel="stylesheet" href="./dist/styles.css" />
   </head>
-  <body>
+  <body class='h-screen'>
   
   </body>
 </html>
